--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^6.1.0
   page_transition: ^2.1.0
   intl: ^0.19.0
+  cloud_firestore: ^4.14.0
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
